--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "styled-components": "^6.1.10",
     "tailwind-merge": "^2.2.2",
     "zod": "^3.23.6"
   },
