--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "framer-motion": "^11.1.9",
     "postcss": "^8",
+    "react-intersection-observer": "^9.10.2",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
