--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "zod": "^3.23.6"
   },
   "devDependencies": {
+    "@nextui-org/react": "^2.3.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
