--- a/package.json
+++ b/package.json
@@ -21,18 +21,15 @@
     "axios": "^1.6.8",
     "axios-auth-refresh": "^3.3.6",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
+    "cookies-next": "^4.1.1",
     "date-fns": "^3.6.0",
     "input-otp": "^1.2.4",
-    "lucide-react": "^0.365.0",
     "mongodb": "^6.5.0",
-    "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "next-client-cookies": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-menubar": "^1.0.4",
-    "@radix-ui/react-slot": "^1.0.2",
-    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.378.0",
     "next": "14.1.4",
@@ -40,9 +37,8 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
     "react-hook-form": "^7.51.4",
-    "tailwind-merge": "^2.2.2",
     "zod": "^3.23.6"
   },
   "devDependencies": {
