--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
@@ -21,29 +23,27 @@
     "axios": "^1.6.8",
     "axios-auth-refresh": "^3.3.6",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "cmdk": "^0.2.1",
     "cookies-next": "^4.1.1",
     "date-fns": "^3.6.0",
     "input-otp": "^1.2.4",
+    "lucide-react": "^0.378.0",
     "mongodb": "^6.5.0",
+    "next": "14.1.4",
     "next-auth": "^4.24.7",
     "next-client-cookies": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-menubar": "^1.0.4",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.378.0",
-    "next": "14.1.4",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "react-hook-form": "^7.51.4",
     "zod": "^3.23.6"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.12.11",
+    "@types/react": "18.3.2",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
@@ -51,6 +51,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5"
+    "typescript": "5.4.5"
   }
 }
