--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "axios": "^1.6.8",
     "axios-auth-refresh": "^3.3.6",
@@ -34,13 +35,14 @@
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "next-client-cookies": "^1.1.1",
+    "next-intl": "^3.14.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "styled-components": "^6.1.10",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "styled-components": "^6.1.10",
     "zod": "^3.23.6"
   },
   "devDependencies": {
