--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "components/workspace/ProgressTaskstsx"],
   "exclude": ["node_modules", ".next"]
 }
 
