--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
+    "@fullcalendar/core": "^6.1.13",
+    "@fullcalendar/daygrid": "^6.1.13",
+    "@fullcalendar/interaction": "^6.1.13",
+    "@fullcalendar/react": "^6.1.13",
+    "@fullcalendar/timegrid": "^6.1.13",
+    "@headlessui/react": "^2.0.4",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -33,11 +39,13 @@
     "cookies-next": "^4.1.1",
     "date-fns": "^3.6.0",
     "input-otp": "^1.2.4",
+    "install": "^0.13.0",
     "lucide-react": "^0.378.0",
     "mongodb": "^6.5.0",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "next-client-cookies": "^1.1.1",
+    "npm": "^10.8.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
