--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
+    "recharts": "^2.12.7",
     "styled-components": "^6.1.10",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
