--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@fullcalendar/core": "^6.1.13",
     "@fullcalendar/daygrid": "^6.1.13",
     "@fullcalendar/interaction": "^6.1.13",
@@ -38,6 +40,7 @@
     "cmdk": "^0.2.1",
     "cookies-next": "^4.1.1",
     "date-fns": "^3.6.0",
+    "emoji-mart": "^5.6.0",
     "input-otp": "^1.2.4",
     "install": "^0.13.0",
     "lucide-react": "^0.378.0",
