--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^3.6.0",
     "input-otp": "^1.2.4",
     "install": "^0.13.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.378.0",
     "mongodb": "^6.5.0",
     "next": "14.1.4",
