--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-table": "^8.19.3",
     "axios": "^1.6.8",
     "axios-auth-refresh": "^3.3.6",
     "class-variance-authority": "^0.7.0",
